--- a/Solution/PatxiPersianasWriteAPI/appsettings.json
+++ b/Solution/PatxiPersianasWriteAPI/appsettings.json
@@ -30,9 +30,8 @@
       }
     ]
   },
-  "Authority": {
-    "ServerURL": "https://localhost:7036/",
-    "ClientId": "4be33d09-8b6a-427f-ac87-38bc752f4d9a"
+  "Authority": {    
+    "MicroserviceId": "4be33d09-8b6a-427f-ac87-38bc752f4d9a"
   },
   "Services": {
     "Jwt": "https://localhost:7036/"
